# waldo

./: .gitignore  .gitmodules  CMakeLists.txt  README  auth.h  coreaudio.c  credentials.txt  index.html  libao.c  ogg.c  play.c  server.c  sndqueue.c  sndqueue.h  test_auth.c  test_dump.c  test_play.c  test_stream.c  wave.c
lib/: libauth.dylib
src/: CMakeLists.txt  auth.c
test/: CMakeLists.txt  test_auth.c
