CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

PROJECT(sdj C)

INCLUDE_DIRECTORIES(src)

ADD_DEFINITIONS(-Wall)

ADD_EXECUTABLE(test_auth test_auth.c auth.c)
TARGET_LINK_LIBRARIES(test_auth despotify)
