CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

PROJECT(sdj C)

INCLUDE_DIRECTORIES(src)

ADD_DEFINITIONS(-g -Wall -std=c99)

ADD_EXECUTABLE(test_auth test_auth.c auth.c)
TARGET_LINK_LIBRARIES(test_auth despotify)

ADD_EXECUTABLE(test_dump test_dump.c auth.c)
TARGET_LINK_LIBRARIES(test_dump despotify)

ADD_EXECUTABLE(test_play test_play.c auth.c libao.c)
TARGET_LINK_LIBRARIES(test_play despotify ao)
